<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".GameActivity"
    android:background="#6285bd">

    <LinearLayout
        android:id="@+id/game_board"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/game_score_textview"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/game_score_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="false"
        android:clickable="false"
        android:longClickable="false"
        android:text="@string/game_score_string"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/game_over_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#ff2b2b2b"
        android:clickable="false"
        android:longClickable="false"
        android:text="@string/game_over_textview_string"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffff"
        android:textIsSelectable="false"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/game_over_textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_over_textview"
        android:layout_centerInParent="true"
        android:autoText="true"
        android:background="#ff2b2b2b"
        android:clickable="false"
        android:longClickable="false"
        android:text="@string/game_over_textview_string2"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffff"
        android:textIsSelectable="false"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/game_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:clickable="false"
        android:longClickable="false"
        android:text="@string/game_difficulty"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="false" />

</RelativeLayout>
